<?xml version="1.0"?>
<package>
  <name>thymio_vrep</name>
  <version>0.1.0</version>
  <description>
    Simulation node for Thymio II robot in vrep.

    It translates between aseba messages and std_msgs/String read/written in vrep.
  </description>

  <maintainer email="jerome@idsia.ch">Jerome Guzzi</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>asebaros_msgs</build_depend> 
  <build_depend>std_msgs</build_depend>
  <build_depend>rosgraph_msgs</build_depend>
  <build_depend>message_generation</build_depend>
<!-->  <build_depend>vrep_common</build_depend><-->
  <run_depend>rospy</run_depend>
  <run_depend>asebaros_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rosgraph_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
<!-->  <run_depend>vrep_common</run_depend><-->
</package>
