<?xml version="1.0"?>
<package>
  <name>usi_lab_4</name>
  <version>0.1.0</version>
  <description>
    Provides launch files and configuration for the lab 4 of USI Robotics course 2015.
  </description>

  <maintainer email="jerome@idsia.ch">Jerome Guzzi</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>thymio_driver</build_depend> 
  <build_depend>thymio_vrep</build_depend>
  <run_depend>thymio_driver</run_depend>
  <run_depend>thymio_vrep</run_depend>
</package>
